[package]
name = "autocert"
version = "0.1.0"
authors = ["Florian Uekermann <florian@uekermann.me>"]
edition = "2018"

[dependencies]
async-std = "1.8"
async-tls = "0.11"
futures = "0.3"
rcgen = "0.8"
async-h1 = "2.3"
http-types = "2.9"
serde_json = "1.0"
serde = "1.0"
rustls = "0.19"
ring = "0.16"
base64 = "0.13"
log = "0.4"
simple_logger = "1.11"